# lab5

./: .gitignore  AIController.cpp  AIController.h  AppTime.cpp  AppTime.h  BikePart.h  CMakeLists.txt  Canvas.cpp  Canvas.h  CanvasImpl.cpp  CanvasImpl.h  Command.cpp  Command.h  CommandListener.h  Displayable.h  FileStream.h  GameCanvas.cpp  GameCanvas.h  GameLevel.cpp  GameLevel.h  GamePhysics.cpp  GamePhysics.h  Graphics.cpp  Graphics.h  Keys.h  LevelGenerator.cpp  LevelGenerator.h  LevelLoader.cpp  LevelLoader.h  Logger.cpp  Logger.h  MathF16.cpp  MathF16.h  Micro.cpp  Micro.h  RecordEnumeration.h  RecordEnumerationImpl.cpp  RecordEnumerationImpl.h  RecordStore.cpp  RecordStore.h  (+10 more)
.cache/clangd/index/: AIController.cpp.878611CEE8C5BD8C.idx  AIController.cpp.9B0AE14CDDD97FEC.idx  AIController.h.0010A2CE70784225.idx  AIController.h.1E1F2793638DBDFF.idx  AppTime.cpp.1C6D4EEA718A008E.idx  AppTime.cpp.B1B8A0D21E43EDD9.idx  AppTime.cpp.C8865A25824F7BE6.idx  AppTime.h.23D6A5FCA1343FBC.idx  AppTime.h.792006DF9FEE8EED.idx  AppTime.h.F13F148B1551D262.idx  BikePart.h.3DB0AFE16A0224B2.idx  BikePart.h.86770770B02751C6.idx  BikePart.h.F83D912E1332669E.idx  Canvas.cpp.2EA1357BE2CFB6EC.idx  Canvas.cpp.956F3DA0107932B9.idx  Canvas.cpp.E6BCA6AFC988403F.idx  Canvas.h.7E24825EBCA19614.idx  Canvas.h.E09563B8A9365760.idx  Canvas.h.FB43E4F1D715BBA9.idx  CanvasImpl.cpp.33906C49DF705001.idx  CanvasImpl.cpp.A2ACCDE343A01361.idx  CanvasImpl.cpp.ED9519BC562AB4E3.idx  CanvasImpl.h.262B61611C78022F.idx  CanvasImpl.h.B9708FB4487D4C20.idx  CanvasImpl.h.E48E2C84B7497F46.idx  Command.cpp.18506B67C65B1B5E.idx  Command.cpp.28775314514849D8.idx  Command.cpp.C05D4FCB41F1FC01.idx  Command.h.33B69A0B084C5868.idx  Command.h.430DDF8985D8B9B6.idx  Command.h.8524873830BF3B6A.idx  CommandListener.h.1FB5B6BB73424FF3.idx  CommandListener.h.C2C570962C39C27B.idx  CommandListener.h.E78C53AD5C151EC0.idx  Displayable.h.11D687059D0011EA.idx  Displayable.h.669B59BD93624415.idx  Displayable.h.77C94EF2BBF2BF0B.idx  GameCanvas.cpp.4DEBD4F85E499532.idx  GameCanvas.cpp.9278609E04DA8043.idx  GameCanvas.cpp.D77119D7B7A3F206.idx  (+60 more)
docs/: запуск.txt
tests/: test_gen.cpp
